# app/Models/InvoiceTransmission.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class InvoiceTransmission extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'irn',
+        'webhook_url',
+        'status',
+        'response_data',
+    ];
+
+    protected $casts = [
+        'response_data' => 'array',
+    ];
+}
